k8s-yaml-files/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-demo
  namespace: default
  labels:
    app: route-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: route-demo
  template:
    metadata:
      labels:
        app: route-demo
    spec:
      containers:
        - name: route-demo
          image: 167140819348.dkr.ecr.us-east-1.amazonaws.com/react-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: route-demo-storage
              mountPath: /usr/share/nginx/html/data
      volumes:
        - name: route-demo-storage
          persistentVolumeClaim:
            claimName: route-demo-pvc
